[package]
name = "tokio-prometheus-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.22.0"
tokio-metrics = "0.3.1"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
