[package]
name = "tokio-prometheus-client"
description = "Export tokio-metrics using prometheus-client"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.22.0"
tokio-metrics = { version = "0.3.1", features = ["rt"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
